# blujet2

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  playwright.config.ts
backend/: .dockerignore  .env.example  .env.test  Dockerfile  docker-entrypoint.sh  eslint.config.mjs  package-lock.json  package.json
design-reference/: .image-slots.state.json  .thumbnail  ReservationSystem.dc.html  image-slot.js  site-data.js  باشگاه مشتریان.dc.html  تماس با ما.dc.html  تکمیل خرید.dc.html  در حال تعمیر و نگهداری.dc.html  درباره ما.dc.html  صفحه 404.dc.html  صفحه اصلی-print-x4xf3z.dc.html  صفحه اصلی.dc.html  فراموشی رمز.dc.html  قوانین و مقررات.dc.html  مدیریت رزرو.dc.html  مقاصد.dc.html  نتایج پرواز.dc.html  وایرفریم سایت ایرلاین.dc.html  ورود مدیران و کارمندان.dc.html  ورود و ثبتنام.dc.html  وضعیت پرواز.dc.html  پرداخت.dc.html  پشتیبانی.dc.html  پنل آژانس.dc.html  پنل ادمین سایت.dc.html  پنل رئیس هیئت مدیره.dc.html  پنل مدیر IT.dc.html  پنل مدیر ارشد.dc.html  پنل مدیر بازرگانی-print-va3k0g.dc.html  پنل مدیر بازرگانی.dc.html  پنل مدیر عامل.dc.html  پنل مدیر مالی.dc.html  پنل کاربر.dc.html  پنل کارمند.dc.html
docs/: API.md  DB_SCHEMA.md  DEPLOY_IP.md  RUNBOOK.md  openapi.json
e2e/: agency-portal-journey.spec.ts  (+6 more)
ml-service/: .dockerignore  pyproject.toml
ml-service/app/: main.py
ml-service/app/api/: pricing.py
ml-service/app/core/: auth.py  config.py
ml-service/app/schemas/: pricing.py
ml-service/app/services/: pricing.py
ml-service/tests/: test_pricing.py
(+552 files in other folders)
